@@ -25,7 +25,7 @@ import java.util.List;
 
 import org.apache.log4j.LogManager;
 import org.apache.log4j.Logger;
-import org.codehaus.jackson.map.ObjectMapper;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -407,8 +407,8 @@ public class Site2dRoutesController {
     model.addAttribute("anomaly_detectors", createOrderedDetectorList(anomalymanager.list(), detectors));
     model.addAttribute("name", (name == null) ? "" : name);
     model.addAttribute("author", (author == null) ? "" : author);
-    model.addAttribute("active", (active == null) ? new Boolean(true) : active);
-    model.addAttribute("byscan", (byscan == null) ? new Boolean(false) : byscan);
+    model.addAttribute("active", (active == null) ? Boolean.valueOf(true) : active);
+    model.addAttribute("byscan", (byscan == null) ? Boolean.valueOf(false) : byscan);
     model.addAttribute("method", (method == null) ? CompositingRule.PCAPPI : method);
     model.addAttribute("prodpar", (prodpar == null) ? "1000" : prodpar);
     model.addAttribute("description", (description == null) ? "" : description);
@@ -416,16 +416,16 @@ public class Site2dRoutesController {
         (recipients == null) ? new ArrayList<String>() : recipients);
     model.addAttribute("arealist", pgfClientHelper.getUniqueAreaIds());    
     model.addAttribute("areaid", (areaid == null) ? "" : areaid);
-    model.addAttribute("interval", (interval == null) ? new Integer(15) : interval);
-    model.addAttribute("applygra", (applygra == null) ? new Boolean(false) : applygra);
-    model.addAttribute("ZR_A", (ZR_A == null) ? new Double(200.0) : ZR_A);
-    model.addAttribute("ZR_b", (ZR_b == null) ? new Double(1.6) : ZR_b);
-    model.addAttribute("ignore_malfunc", (ignore_malfunc == null) ? new Boolean(false) : ignore_malfunc);
-    model.addAttribute("ctfilter", (ctfilter == null) ? new Boolean(false) : ctfilter);
+    model.addAttribute("interval", (interval == null) ? Integer.valueOf(15) : interval);
+    model.addAttribute("applygra", (applygra == null) ? Boolean.valueOf(false) : applygra);
+    model.addAttribute("ZR_A", (ZR_A == null) ? Double.valueOf(200.0) : ZR_A);
+    model.addAttribute("ZR_b", (ZR_b == null) ? Double.valueOf(1.6) : ZR_b);
+    model.addAttribute("ignore_malfunc", (ignore_malfunc == null) ? Boolean.valueOf(false) : ignore_malfunc);
+    model.addAttribute("ctfilter", (ctfilter == null) ? Boolean.valueOf(false) : ctfilter);
     model.addAttribute("pcslist", pgfClientHelper.getUniquePcsIds());
     model.addAttribute("pcsid", (pcsid == null) ? "" : pcsid);
-    model.addAttribute("xscale", (xscale == null) ? new Double(2000.0) : xscale);
-    model.addAttribute("yscale", (yscale == null) ? new Double(2000.0) : yscale);
+    model.addAttribute("xscale", (xscale == null) ? Double.valueOf(2000.0) : xscale);
+    model.addAttribute("yscale", (yscale == null) ? Double.valueOf(2000.0) : yscale);
     model.addAttribute("options", (options == null) ? "" : options);
     model.addAttribute("filterJson", jsonFilter);
     
@@ -434,7 +434,7 @@ public class Site2dRoutesController {
     model.addAttribute("detectors",
         (detectors == null) ? new ArrayList<String>() : detectors);
     model.addAttribute("quality_control_mode",
-        (quality_control_mode == null) ? new Integer(0) : quality_control_mode);
+        (quality_control_mode == null) ? Integer.valueOf(0) : quality_control_mode);
     if (emessage != null) {
       model.addAttribute("emessage", emessage);
     }
@@ -476,32 +476,32 @@ public class Site2dRoutesController {
     
     model.addAttribute("name", (name == null) ? "" : name);
     model.addAttribute("author", (author == null) ? "" : author);
-    model.addAttribute("active", (active == null) ? new Boolean(true) : active);
+    model.addAttribute("active", (active == null) ? Boolean.valueOf(true) : active);
     model.addAttribute("description", (description == null) ? "" : description);
     model.addAttribute("recipients",
         (recipients == null) ? new ArrayList<String>() : recipients);
-    model.addAttribute("byscan", (byscan == null) ? new Boolean(false) : byscan);
+    model.addAttribute("byscan", (byscan == null) ? Boolean.valueOf(false) : byscan);
     model.addAttribute("method", (method == null) ? CompositingRule.PCAPPI : method);
     model.addAttribute("prodpar", (prodpar == null) ? "1000" : prodpar);
     model.addAttribute("arealist", pgfClientHelper.getUniqueAreaIds());    
     model.addAttribute("areaid", (areaid == null) ? "" : areaid);
-    model.addAttribute("interval", (interval == null) ? new Integer(15) : interval);
-    model.addAttribute("applygra", (applygra == null) ? new Boolean(false) : applygra);
-    model.addAttribute("ZR_A", (ZR_A == null) ? new Double(200.0) : ZR_A);
-    model.addAttribute("ZR_b", (ZR_b == null) ? new Double(1.6) : ZR_b);
-    model.addAttribute("ignore_malfunc", (ignore_malfunc == null) ? new Boolean(false) : ignore_malfunc);
-    model.addAttribute("ctfilter", (ctfilter == null) ? new Boolean(false) : ctfilter);
+    model.addAttribute("interval", (interval == null) ? Integer.valueOf(15) : interval);
+    model.addAttribute("applygra", (applygra == null) ? Boolean.valueOf(false) : applygra);
+    model.addAttribute("ZR_A", (ZR_A == null) ? Double.valueOf(200.0) : ZR_A);
+    model.addAttribute("ZR_b", (ZR_b == null) ? Double.valueOf(1.6) : ZR_b);
+    model.addAttribute("ignore_malfunc", (ignore_malfunc == null) ? Boolean.valueOf(false) : ignore_malfunc);
+    model.addAttribute("ctfilter", (ctfilter == null) ? Boolean.valueOf(false) : ctfilter);
     model.addAttribute("pcslist", pgfClientHelper.getUniquePcsIds());
     model.addAttribute("pcsid", (pcsid == null) ? "" : pcsid);
-    model.addAttribute("xscale", (xscale == null)?new Double(2000.0) : xscale);
-    model.addAttribute("yscale", (yscale == null)?new Double(2000.0) : yscale);
+    model.addAttribute("xscale", (xscale == null)?Double.valueOf(2000.0) : xscale);
+    model.addAttribute("yscale", (yscale == null)?Double.valueOf(2000.0) : yscale);
     model.addAttribute("options", (options == null)? "" : options);
     model.addAttribute("sources",
         (sources == null) ? new ArrayList<String>() : sources);
     model.addAttribute("detectors",
         (detectors == null) ? new ArrayList<String>() : detectors);
     model.addAttribute("quality_control_mode",
-        (quality_control_mode == null) ? new Integer(0) : quality_control_mode);
+        (quality_control_mode == null) ? Integer.valueOf(0) : quality_control_mode);
     if (emessage != null) {
       model.addAttribute("emessage", emessage);
     }
